--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.5"
   },
+  "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
